[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-forensics"
version = "1.0.0"
description = "Reflection reconstruction + PRNU sensor forensics (offline research toolkit)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23", "scipy>=1.9", "scikit-image>=0.20", "PyWavelets>=1.4"]

[project.optional-dependencies]
reflection = ["opencv-python>=4.7", "mediapipe>=0.10"]

[project.scripts]
recon = "recon.cli:main"

[tool.setuptools]
packages = ["recon"]
